phptidy Changelog

Version 2.13
- Don't touch one line docblocks

Version 2.12 (2013-12-03)
- Bugfix: Handle docblocks with content in the same line after "/**"

Version 2.11 (2013-05-07)
- Configurable diff command
- Tested on MacOS X
- Handle anonymous functions

Version 2.10 (2009-11-29)
- Bugfix: Do not touch casing of object methods named like built in functions
- Bugfix: Indenting of opening curly braces without control structure
- Allow constants as docroot variables

Version 2.9 (2009-01-07)
- Support for opening curly braces in new lines
- Optional skipping of not wanted cleanup functions
- Reuse existing comments for new function docblocks

Version 2.8 (2008-05-22)
- README
- Display of a usage message
- Better error messages and correct return codes
- Check for required environment
- Empty default author to avoid, that my name is being written in scripts by
  accident
- Bugfix: Removing brackets from statements
- Remove round brackets also from "break", "continue" and "echo"
- Performance optimisations
- Strip new token index [2]
- Indenting support for more operators
- Changed default configuration for $open_tag to "<?php" to make it work in
  systems without short tags enabled
- Check encoding
- Colored diff output

Version 2.7 (2008-04-11)
- @see-Tags for dynamic includes
- Add blank lines before and after functions and classes
- Heredoc syntax
- Bugfix: Do not indent T_ENCAPSED_AND_WHITESPACE
- Bugfix: Handling of returning a reference from a function

Version 2.6 (2007-12-04)
- Configurable PHP Open Tags
- Project files excludes
- Use array_splice() to replace code
- Progress bar

Version 2.5 (2007-06-13)
- First public release
- All inline comments in english
- Cache